Articles overflow issue resolved

--- a/src/styles/_article.scss
+++ b/src/styles/_article.scss
@@ -37,9 +37,6 @@
         a:hover {
           color: grey;
         }
-        @media (max-width: 900px) {
-          padding-left: 40px;
-        }
       }
       div {
         color: black;
